--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,16 @@ b {
 .white {
     background: #fff;
 }
+a {
+    color: #fff;
+    text-decoration: none;
+}
 
 /* Header Styles */
 
 header.header {
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 150px);
     background: #fff;
     overflow: hidden;
 }
@@ -62,8 +66,6 @@ header.header .menu .wrapper {
 }
 header.header .menu .menu-icon img {
     width: 30px;
-    color: #fff;
-    background: #fff;
 }
 header.header .main-title {
     width: 100%;
@@ -211,7 +213,7 @@ div.for-who h3 {
 }
 a.buy {
     display: inline-block;
-    padding: 5px 10px;
+    padding: 10px 20px;
     border: 4px solid #FED605;
     text-decoration: none;
     margin-top: 40px;
@@ -221,10 +223,27 @@ a.buy {
     background: url(../images/white-paint.png);
     background-position: center;
     background-size: cover;
+    color: #4E0379;
 }
 a.buy:hover {
     color: #FED605;
 } 
+
+/* Swiper Styles */
+
+.swiper-container {
+    width: 100%;
+    min-height: 300px;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 /* Footer Styles */
 footer.footer {
